<resources>
    <string name="app_name">GUARD</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_qr">Mã QR của bạn</string>
    <string name="nav_histori">Lịch sử</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_api_key">AIzaSyAPMZ2cOQtAkWj0P-OkDCrIzh8IDc5av88</string>
</resources>