<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_qr"
            android:title="@string/nav_qr"
            android:icon="@drawable/ic_qr"/>
        <item android:id="@+id/nav_histori"
            android:title="@string/nav_histori"
            android:icon="@drawable/ic_history"/>
        <item android:id="@+id/nav_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_person"/>
        <item android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>